# sn_gui

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  files.rs  home.tsx  main.rs  main.tsx  network.rs  node.rs  options.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  state.rs
