[package]
name = "sn_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "^0.20.1"
env_logger = "^0.10.0"
eyre = "^0.6.8"
log = "^0.4.17"
rfd = "0.10.0"
serde = {version = "^1.0.151", features=["derive", "serde_derive"]}
serde_json = "^1.0.91"
